--- a/src/main/resources/templates/WebKhachHang/danh-gia.html
+++ b/src/main/resources/templates/WebKhachHang/danh-gia.html
@@ -360,7 +360,7 @@
             </h3>
             <div class="space-y-3">
                 <p class="text-sm flex items-center"><i class="fas fa-envelope mr-3"></i>datn.acv@gmail.com</p>
-                <p class="text-sm flex items-center"><i class="fas fa-phone-alt mr-3"></i>1900 8686</p>
+                <p class="text-sm flex items-center"><i class="fas fa-phone-alt mr-3"></i>0911 006 045</p>
             </div>
             <div class="flex space-x-4 mt-6">
                 <a href="#" class="text-white hover:text-[#9FD5F7] text-xl transition-colors" aria-label="Facebook">
