--- a/src/main/resources/templates/WebKhachHang/lich_su.html
+++ b/src/main/resources/templates/WebKhachHang/lich_su.html
@@ -287,7 +287,7 @@
             </div>
             <div class="modal-body">
                 <p>Vui lòng liên hệ với chúng tôi qua hotline để được hỗ trợ khiếu nại:</p>
-                <p class="font-bold text-lg">Hotline: 1900 8686</p>
+                <p class="font-bold text-lg">Hotline: 0911 006 045</p>
                 <p>Email: datn.acv@gmail.com</p>
                 <p class="mt-3">Chúng tôi sẽ hỗ trợ bạn trong thời gian sớm nhất. Cảm ơn bạn đã tin tưởng ACV Store!</p>
             </div>
@@ -370,7 +370,7 @@
         <div>
             <h3 class="text-lg font-bold mb-4">Liên hệ</h3>
             <p class="text-sm">Email: datn.acv@gmail.com</p>
-            <p class="text-sm">Hotline: 1900 8686</p>
+            <p class="text-sm">Hotline: 0911 006 045</p>
             <div class="flex space-x-4 mt-4">
                 <a href="#" class="text-white hover:text-blue-300" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" class="text-white hover:text-blue-300" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
